fixed card spacing issues

--- a/public/css/experience.css
+++ b/public/css/experience.css
@@ -18,8 +18,8 @@
 
 /* Style for each job card */
 .job-experience {
-    width: 22vw; 
-    height: 60vh; 
+    width: 23vw; 
+    min-height: 70vh; 
     border-radius: 15px;
     background-color: rgb(255, 255, 255);
     transition: all 0.5s;
